<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/tvResultadosFinais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_resultados_finais"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAltura1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_altura_m"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadosFinais" />

    <TextView
        android:id="@+id/tvAlturaResultado"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvAltura1"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadosFinais" />

    <TextView
        android:id="@+id/tvPeso1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_peso_kg"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAltura1" />

    <TextView
        android:id="@+id/tvPesoResultado"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvPeso1"
        app:layout_constraintTop_toBottomOf="@+id/tvAlturaResultado" />

    <ImageView
        android:id="@+id/ivTabelaImc"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/txt_imagem_tabela_imc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPesoResultado"
        app:srcCompat="@drawable/tabelaimc"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvIMC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_resultado_do_imc"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTabelaImc" />

    <TextView
        android:id="@+id/tvIMCResultado"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIMC1" />

    <TextView
        android:id="@+id/tvRecomendacao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_recomendacao"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIMCResultado" />

    <TextView
        android:id="@+id/tvRecomendacaoResultado"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecomendacao1" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_btn_voltar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecomendacaoResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>